--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,34 @@
 h1 {
-  text-align: center;
+ margin-left: 500px;
   background: -webkit-linear-gradient(red,blue);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  position: relative;
+ 
 }
 
 h3 {
   text-align: center;
   color: crimson;
-  
+  font-family: cursive;
+  font-size: 25px;
+  position: absolute;
+  margin-top: -59px;
+  margin-left: 720px;
 }
+ #but{
+  color: rgb(17, 17, 17);
+  background-color: coral;
+  position:absolute;
+  font-family: cursive;
+  margin-left: 1000px;
+  margin-top: -58px;
+  padding: 5px;
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px rgb(141, 141, 141);
+ }
+
+ #but:hover{
+  box-shadow: 2px 2px 5px rgb(42, 143, 12);
+  transform: scale(1.1);
+ }
